# session

./: CMakeLists.txt  boost.cmake  os_env.cmake
inc/: DLL_Export.h  ISessionObject.h  ISharedMemoryObject.h  Session.h  SharedMemory.h  SharedMemory.hpp  test_call.h
src/: Session.cpp  SharedMemory.cpp  dllmain.cpp
test/: main.cpp  test_api.cpp
